package org.yamcs.protobuf;
/* Yamcs Management structures and services */
/* Services are used just for reference, no code is being generated (yet) */

import "yamcs.proto";

/*service states coming from guava (numbers have to correspond)*/
enum ServiceState {
   NEW=0;
   STARTING=1;
   RUNNING=2;
   STOPPING=3;
   TERMINATED=4;
}

/************** Channel Control service *********************/
/* The ChannelInfo and ClientInfo events are posted on the channelInfo address. 
 * There is also a queue with the same name containing the last values
 * The name of the events are channelUpdated (means added or updated),
 * channelRemoved, clientUpdated (means connected or updated) clientDisconnected */
message ChannelInfo {
    required string instance=1;//yamcs instance 
    required string name=2;
    optional string type=3;
    optional string spec=4;
    optional string creator=5;
    optional bool hasCommanding=6;
    optional ServiceState state=7;
    optional ReplayRequest replayRequest=8; //in case of replay channels
    optional ReplayStatus.ReplayState replayState=9; //in case of replay channels
}

message ClientInfo {
    required string instance=1;
    required int32 id=2;
    optional string username=3;
    optional string applicationName=4;
    optional string channelName=5;
}
message TmStatistics {
    required string packetName=1;
    optional int64 receivedPackets=2;
    optional int64 lastReceived=3; 
    optional int64 lastPacketTime=4;
    optional int32 subscribedParameterCount=5;
}

message Statistics {
    required string instance=1;
    required string channelName=2;
    repeated TmStatistics tmstats=3;
    optional int64 lastUpdated=4; //java local time of the last update
}

message ChannelRequest { //this is used for ChannelControl service
    required string instance=1;
    required string name=2;
    optional string type=3; //only for CreateChannel
    optional string spec=4; //only for CreateChannel
    optional bool persistent=5[default=false]; //only for CreateChannel
    repeated int32 clientId=6; //for CreateChannel and ConnectToChannel
    optional int64 seekTime=7; //for SeekChannel
}

service ChannelControl {
  rpc CreateChannel(ChannelRequest) returns (Void);
  rpc ConnectToChannel(ChannelRequest) returns (Void);
  rpc PauseChannel(ChannelRequest) returns (Void);
  rpc ResumeChannel(ChannelRequest) returns (Void);
  rpc SeekChannel(ChannelRequest) returns (Void);
}

/************** Link Control ****************************/
/*these messages are posted on the linkInfo address.
  there is also a linkInfo queue that contains the last values
*/
message LinkInfo {
    required string instance=1;
    required string name=2;
    optional string type=3;
    optional string spec=4;
    optional string stream=5;
    optional bool disabled=6;
    optional string status=7;
    optional int64 dataCount=8;
    optional string detailedStatus=9;
}

